Converted to java 8 improved version