@@ -1,50 +1,53 @@
 package pcd.ass01.simtrafficbase_improved;
 
 import pcd.ass01.simengineseq_improved.AbstractEnvironment;
+import pcd.ass01.simengineseq_improved.Action;
 import pcd.ass01.simengineseq_improved.Percept;
+import pcd.ass01.simtrafficbase.P2d;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class RoadsEnv extends AbstractEnvironment {
-		
+
 	private static final int MIN_DIST_ALLOWED = 5;
 	private static final int CAR_DETECTION_RANGE = 30;
 	private static final int SEM_DETECTION_RANGE = 30;
-	
+
 	/* list of roads */
 	private List<Road> roads;
 
 	/* traffic lights */
 	private List<TrafficLight> trafficLights;
-	
-	/* cars situated in the environment */	
+
+	/* cars situated in the environment */
 	private HashMap<String, CarAgentInfo> registeredCars;
 
 
 	public RoadsEnv() {
 		super("traffic-env");
-		registeredCars = new HashMap<>();	
+		registeredCars = new HashMap<>();
 		trafficLights = new ArrayList<>();
 		roads = new ArrayList<>();
 	}
-	
+
 	@Override
 	public void init() {
-		for (var tl: trafficLights) {
+		for (TrafficLight tl: trafficLights) {
 			tl.init();
 		}
 	}
-	
+
 	@Override
 	public void step(int dt) {
-		for (var tl: trafficLights) {
+		for (TrafficLight tl: trafficLights) {
 			tl.step(dt);
 		}
 	}
-	
+
 	public void registerNewCar(CarAgent car, Road road, double pos) {
 		registeredCars.put(car.getId(), new CarAgentInfo(car, road, pos));
 	}
@@ -63,18 +66,18 @@ public class RoadsEnv extends AbstractEnvironment {
 
 	@Override
 	public Percept getCurrentPercepts(String agentId) {
-		
+
 		CarAgentInfo carInfo = registeredCars.get(agentId);
 		double pos = carInfo.getPos();
 		Road road = carInfo.getRoad();
 		Optional<CarAgentInfo> nearestCar = getNearestCarInFront(road,pos, CAR_DETECTION_RANGE);
 		Optional<TrafficLightInfo> nearestSem = getNearestSemaphoreInFront(road,pos, SEM_DETECTION_RANGE);
-		
+
 		return new CarPercept(pos, nearestCar, nearestSem);
 	}
 
 	private Optional<CarAgentInfo> getNearestCarInFront(Road road, double carPos, double range){
-		return 
+		return
 				registeredCars
 				.entrySet()
 				.stream()
@@ -88,51 +91,48 @@ public class RoadsEnv extends AbstractEnvironment {
 	}
 
 	private Optional<TrafficLightInfo> getNearestSemaphoreInFront(Road road, double carPos, double range){
-		return 
+		return
 				road.getTrafficLights()
 				.stream()
 				.filter((TrafficLightInfo tl) -> tl.roadPos() > carPos)
 				.min((c1, c2) -> (int) Math.round(c1.roadPos() - c2.roadPos()));
 	}
-	
-	
+
+
 	@Override
 	public void processActions() {
-		for (var act: submittedActions) {
-			switch (act) {
-			case MoveForward mv: {
-				CarAgentInfo info = registeredCars.get(mv.agentId());
-				Road road = info.getRoad();
-				Optional<CarAgentInfo> nearestCar = getNearestCarInFront(road, info.getPos(), CAR_DETECTION_RANGE);
-				
-				if (!nearestCar.isEmpty()) {
-					double dist = nearestCar.get().getPos() - info.getPos();
-					if (dist > mv.distance() + MIN_DIST_ALLOWED) {
-						info.updatePos(info.getPos() + mv.distance());
-					}
-				} else {
-					info.updatePos(info.getPos() + mv.distance());
-				}
-	
-				if (info.getPos() > road.getLen()) {
-					info.updatePos(0);
-				}
-				break;
-			}
-			default: break;
-			}
+		for (Action act: submittedActions) {
+            if (act instanceof MoveForward) {
+                MoveForward mv = (MoveForward) act;
+                CarAgentInfo info = registeredCars.get(mv.agentId());
+                Road road = info.getRoad();
+                Optional<CarAgentInfo> nearestCar = getNearestCarInFront(road, info.getPos(), CAR_DETECTION_RANGE);
+
+                if (nearestCar.isPresent()) {
+                    double dist = nearestCar.get().getPos() - info.getPos();
+                    if (dist > mv.distance() + MIN_DIST_ALLOWED) {
+                        info.updatePos(info.getPos() + mv.distance());
+                    }
+                } else {
+                    info.updatePos(info.getPos() + mv.distance());
+                }
+
+                if (info.getPos() > road.getLen()) {
+                    info.updatePos(0);
+                }
+            }
 		}
 	}
-	
-	
+
+
 	public List<CarAgentInfo> getAgentInfo(){
-		return this.registeredCars.entrySet().stream().map(el -> el.getValue()).toList();
+		return this.registeredCars.entrySet().stream().map(el -> el.getValue()).collect(Collectors.toList());
 	}
 
 	public List<Road> getRoads(){
 		return roads;
 	}
-	
+
 	public List<TrafficLight> getTrafficLights(){
 		return trafficLights;
 	}
